[package]
name = "toy-rusttp"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE.txt"
description = "Toy RUSttp - aka Torus is a toy project synchronous http server library written with 0 dependencies"
readme = "README.md"
repository = "https://github.com/AfkaraLP/torus-http"

[dependencies]


